[project]
name = "lang-orchestration-flamework"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.137.0",
    "langchain>=1.3.9",
    "langchain-groq>=1.1.3",
    "langgraph>=1.2.5",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.49.0",
]
